2001-05-14	Till Straumann <strauman@slac.stanford.edu>

	* Per PR212, added envlock support for newlib.  This is used
	by at least getenv()/putenv() to avoid race conditions.
	* libc/envlock.c: New file.
	* libc/Makefile.am: Modified to reflect above.

2002-05-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>	

	* include/Makefile.am: Remove.
	* include/sys/utsname.h: Added, removed times (now in newlib).
	* Makefile.am: Merge include/Makefile.am

	* libc/utsname.c: Relocated from posix/src.
	* libc/Makefile.am: Reflect changes above.

	* configure.ac: Remove include/Makefile

2002-05-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/sys/ioctl.h: Relocated from libnetworking/sys.
	* include/sys/filio.h: Relocated from libnetworking/sys.
	* include/sys/sockio.h: Relocated from libnetworking/sys.
	* include/Makefile.am: Reflect changes above.
	* configure.ac: Take out *NETWORKING*.

2001-04-26	Joel Sherrill <joel@OARcorp.com>

	* libc/gxx_wrappers.c: Fix to keep prototype same as in gcc and
	remove warning.
 
2002-04-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libc/scandir.c: Initialize nitems = 0.

2002-04-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Add stdint.h and inttypes.h.
	  (reported by Mike Siers <mikes@poliac.com>)
	* include/stdint.h: New file.
	* include/inttypes.h: New file.

2002-04-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libc/stat.c: include <string.h>.
	* libc/printk.c: Remove libcpu/cpu.h.

2002-04-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libc/ctermid.c: Include <string.h>.
	* libc/ttyname.c: Ditto.
	* libc/ttyname_r.c: Ditto.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* libc/Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-03-20	Joel Sherrill <joel@OARcorp.com>

	* PR143