@@ -1,3 +1,8 @@
+2001-05-15	Joel Sherrill <joel@OARcorp.com>
+
+	* libc/Makefile.am: envlock.c should only be built for embedded
+	targets using newlib.
+
 2001-05-14	Till Straumann <strauman@slac.stanford.edu>
 
 	* Per PR212, added envlock support for newlib.  This is used
